# fireflyframework-datascience

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
assets/: README.md
assets/tools/: gen_banner.py  gen_diagrams.py
benchmarks/: RESULTS.md  amlb_benchmark.py  automl_benchmark.py  beat_baseline.py  genai_value.py  scientific_eval.py
docs/: README.md  agentic-loop.md  architecture.md  automl.md  benchmarks.md  configuration.md  datasets.md  deep-learning.md  explainability.md  genai-features.md  index.md  llm-configuration.md  quickstart.md  samples.md  security.md  serving.md  tutorial.md  use-case-lumen.md
docs/stylesheets/: firefly.css
samples/: advanced_automl.py  genai_llm_showcase.py  industry_showcase.py  lumen_credit_risk.py  tutorial.py
src/fireflyframework_datascience/: __init__.py  _version.py  application.py  preprocessing.py  tuning.py
src/fireflyframework_datascience/automl/: __init__.py  auto_configuration.py  facade.py
src/fireflyframework_datascience/cli/: __init__.py  main.py
src/fireflyframework_datascience/container/: __init__.py  conditions.py  container.py  stereotypes.py
src/fireflyframework_datascience/core/: __init__.py  auto_configuration.py  banner.py  config.py  exceptions.py  ordering.py  plugin.py  types.py
src/fireflyframework_datascience/datasets/: __init__.py  adapters.py  auto_configuration.py
src/fireflyframework_datascience/dl/: __init__.py  _torch_impl.py  adapters.py  auto_configuration.py
src/fireflyframework_datascience/engineering/: __init__.py  auto_configuration.py  loop.py
src/fireflyframework_datascience/evaluation/: __init__.py  adapters.py  auto_configuration.py
src/fireflyframework_datascience/explainability/: __init__.py  adapters.py  auto_configuration.py
src/fireflyframework_datascience/features/: __init__.py  _schema.py  audit.py  auto_configuration.py  executor.py  genai.py
src/fireflyframework_datascience/lineage/: __init__.py  adapters.py  auto_configuration.py
src/fireflyframework_datascience/models/: __init__.py  adapters.py  auto_configuration.py  calibration.py  ensemble.py
src/fireflyframework_datascience/nlp/: __init__.py  adapters.py  auto_configuration.py
src/fireflyframework_datascience/ports/: __init__.py
src/fireflyframework_datascience/search/: __init__.py  adapters.py  auto_configuration.py
src/fireflyframework_datascience/serving/: __init__.py  adapters.py  auto_configuration.py
src/fireflyframework_datascience/tracking/: __init__.py  adapters.py  auto_configuration.py
src/fireflyframework_datascience/validation/: __init__.py  adapters.py  auto_configuration.py
src/fireflyframework_datascience/vision/: __init__.py  _cnn_impl.py  adapters.py  auto_configuration.py
tests/: test_application.py  test_automl.py  test_automl_genai_wiring.py  test_calibration.py  test_cv_and_prauc_selection.py  test_default_trainers.py  test_ensemble.py
tests/benchmarks/: test_amlb.py  test_beat.py  test_benchmark.py  test_scientific.py
tests/cli/: test_cli.py
tests/container/: test_conditions.py  test_container.py
tests/core/: test_banner.py  test_config.py  test_version.py
tests/datasets/: test_loaders.py
tests/dl/: test_dl.py
tests/engineering/: test_loop.py
tests/evaluation/: test_metrics.py  test_richer_metrics.py
tests/explainability/: test_explainability.py
tests/features/: test_audit_trail.py  test_executor.py  test_executor_enforcement.py  test_genai_fe.py
tests/models/: test_boosting.py  test_trainers.py
tests/nlp/: test_nlp.py
tests/samples/: test_advanced_automl.py  test_genai_value.py  test_industry.py  test_llm_showcase.py  test_lumen.py  test_tutorial.py
tests/search/: test_search.py
tests/serving/: test_serving.py
tests/tracking/: test_tracking.py
tests/validation/: test_validators.py
tests/vision/: test_vision.py
